# Convoy-Calibration-Software

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: backend.rs  calibration.rs  config.rs  lib.rs  main.rs  manifest.rs  process.rs  rtt_protocol.rs  rtt_text.rs  types.rs
docs/: rtt_binary_protocol.md
firmware/: README.md  manifest.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  backendClient.ts  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
scripts/: build_calibration_portable.sh  launch_calibration_dev.sh  launch_calibration_gui.sh  launch_calibration_portable.sh  run_with_watcher.sh
