[package]
name = "calibration-backend"
version = "0.1.0"
edition = "2021"
description = "Factory calibration backend for CONVOY IMU boards"
license = "Proprietary"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.12"
