[package]
name = "convoy-calibration-gui"
version = "0.1.0"
description = "CONVOY calibration desktop GUI"
authors = ["CONVOY"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calibration-backend = { path = "../../backend" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[workspace]
